<resources>
    <string name="app_name">Weather</string>
    <string name="main_retrofit_in_progress">Retraiving…</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="created_by">Created by</string>
    <string name="dev_name">ADLT</string>
    <string name="pressure">Pression</string>
    <string name="update">Updated</string>
    <string name="humidity">Humidity</string>
    <string name="logo">Weather</string>
    <string name="no_location_detected">"Can not change location. Make sure the locale service is active on your device."</string>
    <string name="permission_denied_explanation">"Access denied, location is required to use the app."</string>
    <string name="permission_rationale">"Location permission is needed to use the app"</string>
    <string name="settings">Settings</string>
    <string name="no_internet_access">No internet access</string>
    <string name="updated">\Updated:</string>
    <string name="sensation">\"Sense: "</string>
    <string name="error_ocurred">There were an error with the data</string>
    <string name="updatedAt">\Updated: \</string>
    <string name="hello">Hello</string>
    <string name="canceled_action">Cancel action</string>
    <string name="espanish">ESP</string>
    <string name="english">EN</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="farenheit" translatable="false">Farenheit</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="title_activity_tab" translatable="false">TabActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="date" translatable="false">Date</string>
    <string name="temp_min" translatable="false">Temp Min</string>
    <string name="temp_max" translatable="false">Temp Max</string>
    <string name="loading" translatable="false">Loading</string>
</resources>